@@ -1,4 +1,5 @@
 26 Apr 2003 mipsator
+ * added pmkfile(5).
  * implemented pmk_check_lib().
  * added check_include_function in pmkcfg.sh .
  * improved str_to_dynary() and parse_conf_line().
